--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <script src="./script.js"></script>
 </head>
 
-<body>
+<body onload="renderNotes()">
     <h1>Notizblock</h1>
+    <div id="content"></div>
 </body>
 
 </html>
