--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
 <body onload="renderNotes()">
     <h1>Notizblock</h1>
-    <div id="content"></div>
+    <input type="text" name="newNote" id="inpNewNote">
+    <button onclick="addNote()">Notiz speichern</button>
+    <div id="content">
+
+    </div>
 </body>
 
 </html>
