--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <h1>Notizblock</h1>
     <input type="text" name="newNote" id="inpNewNote">
     <button onclick="addNote()">Notiz speichern</button>
+    <h2>Notes</h2>
     <div id="content">
+
+    </div>
+    <h2>Trash</h2>
+    <div id="trashContent">
 
     </div>
 </body>
