--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./styles/assets.css">
     <link rel="stylesheet" href="./styles/standard.css">
-    <script src="./script.js"></script>
+    <script src="./scripts/templates.js"></script>
+    <script src="./script.js" defer></script>
 </head>
 
 <body onload="init()">
