change: add archive and update styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./styles/assets.css">
     <link rel="stylesheet" href="./styles/standard.css">
+    <link rel="stylesheet" href="./styles/note.css">
     <script src="./scripts/templates.js"></script>
     <script src="./script.js" defer></script>
 </head>
@@ -20,11 +21,12 @@
     <button onclick="saveToLocalStorage()">Notizen speichern</button>
     <h2>Notes</h2>
     <div id="content">
-
     </div>
     <h2>Trash</h2>
     <div id="trashContent">
-
+    </div>
+    <h2>Archive</h2>
+    <div id="archiveContent">
     </div>
 </body>
 
